@@ -8,7 +8,7 @@
     You can return to this changelog via <strong>Help</strong> after Cqrlog has started.
     <hr>
     <br>
-    <strong>Alpha test version of CQRLOG 2.6.0 (120)</strong><br>
+    <strong>Alpha test version of CQRLOG 2.6.0 (122)</strong><br>
     New in this alpha version (not in official version):<br>
     <ul style="list-style: square;text-align:left; color: green;" >
     <li>Xplanet:Fix:If Show own pos show also opponents, and even when None-source is selected</li>
@@ -56,6 +56,7 @@
     <li>Contest: Common Status display improvements. Band (& current rigmode if selected) based grid with selected counters. (Early test phase!). 
 	<br>Some save/load extension fixes.</li>
     <li>(119)</li>
+    <li>QSO list: Fix display of #QSOs and #DXCC cfmd when using dark theme</li>
     <li>eQSL download: Fixed the stuck up caused by eQSL starting to add one more empty line at the end of downloaded file</li>
     <li>Contest: Inform remote mode 'on' when saving manual entered qso. Multimode contests like<br>
 	NAC (CW,Phone,MGM) it may happen that remote is left on when jump from FT8 to CW/Phone.<br>
