@@ -344,6 +344,7 @@ object frmMain: TfrmMain
       Anchors = [akLeft, akBottom]
       BorderSpacing.Left = 10
       Caption = '10000'
+      Font.Color = clBlack
       Font.Style = [fsBold]
       Layout = tlBottom
       ParentColor = False
@@ -409,6 +410,7 @@ object frmMain: TfrmMain
       AutoSize = False
       BorderSpacing.Right = 10
       Caption = '150'
+      Font.Color = clBlack
       Font.Style = [fsBold]
       Layout = tlBottom
       ParentColor = False
